--- a/cms.yaml
+++ b/cms.yaml
@@ -1,9 +1,9 @@
 sites:
-  sontags:
-    git: git@github.com:sontags/sonta.gs.git
-    key: private
-    baseDir: /content/
   unprofessional:
     git: git@github.com:unprofession-al/website.git
     key: private
     baseDir: /
+  test:
+    git: git@github.com:unprofession-al/cmstestrepo.git
+    key: private
+    baseDir: /content
